todo-app/todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: lsxol/todo-app:latest
          volumeMounts:
            - name: todo-volume
              mountPath: /usr/src/app/files
      volumes:
        - name: todo-volume
          emptyDir: {}
