todo-app/todo-app/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  namespace: project
  name: todo-app-route
spec:
  parentRefs:
    - name: todo-app-gateway
  rules:
    - matches:
      - path: 
          type: PathPrefix
          value: /
      backendRefs:
        - name: todo-app-service
          port: 2345
